// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test \`ConnectionError\` own keys 1`] = `
Array [
  "stack",
]
`;

exports[`Test \`ConnectionError\` own keys 2`] = `
Array [
  "stack",
  "message",
]
`;

exports[`Test \`ConnectionError\` own keys 3`] = `
Array [
  "stack",
  "message",
]
`;

exports[`Test \`ConnectionError\` own keys 4`] = `
Array [
  "stack",
  "message",
]
`;
